<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.example.android.developerquizapp.MainActivity">

        <ImageView
            android:id="@+id/main_icon"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:contentDescription="@string/content_main_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/main_icon" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/icon_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginTop="@dimen/oneandhalf_margin"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:context="com.example.android.developerquizapp.MainActivity">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/quadraple_margin"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context="com.example.android.developerquizapp.MainActivity">

                <ImageButton
                    android:id="@+id/html_quiz"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/image_button_dim"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/half_margin"
                    android:background="@color/background"
                    android:contentDescription="@string/content_html_icon"
                    android:scaleType="centerInside"
                    android:src="@drawable/html_quiz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="@dimen/half_margin"
                    android:text="@string/html_quiz"
                    android:textSize="@dimen/middle_size_1" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginTop="@dimen/quadraple_margin"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context="com.example.android.developerquizapp.MainActivity">

                <ImageButton
                    android:id="@+id/android_quiz"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/image_button_dim"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/half_margin"
                    android:background="@color/background"
                    android:contentDescription="@string/content_android_icon"
                    android:scaleType="centerInside"
                    android:src="@drawable/android_quiz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/half_margin"
                    android:text="@string/android_quiz"
                    android:textSize="@dimen/middle_size_1" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/cansu_yeksan"
            android:textSize="@dimen/small_size" />
    </LinearLayout>
</ScrollView>