<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/main_icon"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/content_main_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/main_icon" />

        <ImageView
            android:layout_width="@dimen/prize_dim"
            android:layout_height="@dimen/prize_dim"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/standard_margin"
            android:contentDescription="@string/content_prize_icon"
            android:src="@drawable/prize" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="@dimen/double_margin"
            android:layout_marginRight="@dimen/double_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="Your Score:"
            android:textSize="28sp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.android.developerquizapp.MainActivity">


            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="@dimen/pb_dim"
                android:layout_height="@dimen/pb_dim"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_background"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/progress_drawable" />

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/big_size" />

        </RelativeLayout>

        <TextView

            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/double_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:textSize="@dimen/time_size" />

        <Button
            android:id="@+id/mail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@color/buttonBackground"
            android:onClick="send"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:text="@string/send"
            android:textColor="@color/buttonText" />
    </LinearLayout>
</ScrollView>